# n3_autolanding

./: .gitigniore  CMakeLists.txt  README.md  README.txt
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/apriltag_ros/: .catkin  local_setup.sh
devel/.private/beginner_tutorials/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/dji_sdk/: .catkin  .rosinstall  local_setup.sh
devel/.private/dji_sdk_demo/: .catkin  .rosinstall
devel/include/apriltag_ros/: AnalyzeSingleImage.h  AnalyzeSingleImageRequest.h  AnalyzeSingleImageResponse.h  AprilTagDetection.h  AprilTagDetectionArray.h
devel/include/dji_sdk/: Activation.h  ActivationRequest.h  ActivationResponse.h  CameraAction.h  CameraActionRequest.h  CameraActionResponse.h  DroneArmControl.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskControl.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  FCTimeInUTC.h  FlightAnomaly.h  GPSUTC.h  Gimbal.h  MFIOConfig.h  MFIOConfigRequest.h  MFIOConfigResponse.h  MFIOSetValue.h  MFIOSetValueRequest.h  MFIOSetValueResponse.h  MissionHotpointTask.h  MissionHpAction.h  MissionHpActionRequest.h  MissionHpActionResponse.h  MissionHpGetInfo.h  MissionHpGetInfoRequest.h  MissionHpGetInfoResponse.h  MissionHpResetYaw.h  MissionHpUpdateRadius.h  (+66 more)
launch/: .sdk.launch.swp  check_apriltag_rate.launch  check_gimbal_imshow.launch  check_jump.launch  check_ros_19.launch  check_ros_20.launch  check_ros_22.launch  check_ros_pid.launch  check_ros_sim_3.launch  get_tf.launch  land_1.launch  land_2.launch  platform_simulator.launch  platform_simulator_ros_pid.launch  sdk.launch
launch/backup/: check_ros_10.launch  check_ros_11.launch  check_ros_12.launch  check_ros_13.launch  check_ros_14.launch  check_ros_16.launch  check_ros_19.launch
logs/apriltag_ros/: build.make.000.log.stderr  build.make.003.log.stderr
logs/dji_sdk/: build.cmake.000.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.025.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.054.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.067.log.stderr  build.make.077.log.stderr  build.make.078.log.stderr  build.make.079.log.stderr  build.make.080.log.stderr  build.make.084.log.stderr  build.make.092.log.stderr  build.make.095.log.stderr  build.make.098.log.stderr  build.make.099.log.stderr  build.make.102.log.stderr  build.make.103.log.stderr  build.make.104.log.stderr  build.make.119.log.stderr  build.make.120.log.stderr  build.make.127.log.stderr  build.make.128.log.stderr  build.make.129.log.stderr  build.make.130.log.stderr  (+87 more)
scripts/: adns3080_srom.py  apriltag_rate.py  gimbal_control.py  gimbal_move_test.py  how to setup optical flow.txt  kalmanfilter.py  lidar_ros.py  matek_test.csv  mateksys_not_ros.py  matplotlib_test.py  opticalflow_adns3080.py  opticalflow_adns3080_2.py  pmw_3901_example.py  pwm_internet code.py  tf_tst.py
scripts/backup/: gimbal_control_2022_04_14.py  gimbal_control_2022_04_26.py  pmw_3901_ros.py  pmw_3901_tst.py  pwm_internet code_2022_04_26.py  pwm_internet code_2022_04_26_2.py  save_log_2022_08_08.cpp
src/: .rc.local.swp  calculate_vel.cpp  camera_pub.cpp  camera_pub_no_imshow.cpp  chk_gimbal.cpp  get_tf.cpp  land_2.cpp  log_sim_platform_position.cpp  platform_simulator.cpp  save_log.cpp  save_log_100.cpp  save_log_sim.cpp  talker_ros_19.cpp  talker_ros_20.cpp  talker_ros_22.cpp  talker_ros_pid.cpp  talker_ros_sim_pid.cpp  talker_sim_1.cpp  talker_sim_3.cpp  talker_sim_4.cpp  talker_sim_platform_position.cpp
src/Onboard-SDK-ROS-3.8.1/dji_sdk/: CMakeLists.txt  README.md  README.txt  memo.md  package.xml  workspace.code-workspace
src/Onboard-SDK-ROS-3.8.1/dji_sdk/launch/: all.launch  check_follow.launch  check_follow_left.launch  check_gimbal.launch  check_log.launch  check_ros_17.launch  check_ros_19.launch  check_ros_20.launch  check_ros_22.launch  check_ros_sim_1.launch  check_ros_sim_2.launch  check_ros_sim_4.launch  platform_simulator.launch  run.launch
src/Onboard-SDK-ROS-3.8.1/dji_sdk/launch/backup/: check_follow_yaw.launch  check_move_slow.launch  check_no_control_input.launch  check_ros_15.launch  check_ros_18.launch
src/Onboard-SDK-ROS-3.8.1/dji_sdk/scripts/: apriltag_python.py  kalmanfilter.py  lidar.py  lidar_ros.py  opticalflow_adns3080_framecapture.py  pmw3901_ros_2.py
src/Onboard-SDK-ROS-3.8.1/dji_sdk/scripts/backup/: lidar_test.py  pmw_3901_imshow.py
src/Onboard-SDK-ROS-3.8.1/dji_sdk/src/: camera_pub_and_apriltag.cpp  camera_to_tf.cpp  land_1.cpp  land_2.cpp  platform_simulator.cpp  save_log_platform.cpp  talker_ros.cpp  talker_ros_19.cpp  talker_ros_21.cpp  talker_ros_22.cpp  talker_sim_2.cpp  test.csv  test_code.cpp
src/Onboard-SDK-ROS-3.8.1/dji_sdk/src/backup/: camera_pub_2022_04_13.cpp  demo_mission_not_compiled.cpp  listener_ros (copy).cpp  opencv_tst.cpp  save_log_gps.cpp  talker_ros_12.cpp  talker_ros_19.cpp  talker_ros_2022_02_05.cpp  talker_ros_3.cpp  talker_ros_4.cpp  talker_ros_5.cpp  talker_ros_6.cpp  talker_ros_8.cpp  talker_ros_9.cpp
src/Onboard-SDK-ROS-3.8.1/dji_sdk/src/modules/: dji_sdk_node_edit.cpp
src/backup/: demo_flight_control_copy.cpp  listener_ros.cpp  save_log_22_06_01.cpp  talker_ros (copy).cpp  talker_ros_1.cpp  talker_ros_10.cpp  talker_ros_11.cpp  talker_ros_13.cpp  talker_ros_14.cpp  talker_ros_15.cpp  talker_ros_16.cpp  talker_ros_17.cpp  talker_ros_18.cpp  talker_ros_2.cpp  talker_ros_2022_02_14.cpp  talker_ros_2022_04_13.cpp  talker_ros_7.cpp  talker_ros_original.cpp
src/beginner_tutorials/: package.xml
(+487 files in other folders)
